--- a/agora-angular/src/app/my-profile/my-profile.component.html
+++ b/agora-angular/src/app/my-profile/my-profile.component.html
@@ -1,7 +1,7 @@
-<div class="p-0 container-fluid header" style="background-image: url('../../{{profileDetail.headerImgUrl}}');"></div>
-<div class="container mt-5">
+<div class="container-fluid header" style="background-image: url('../../{{profileDetail.headerImgUrl}}');"></div>
+<div class="container">
     <div class="d-grid justify-content-md-center">
-        <div class="round profile-picture ms-4 bg-white shadow">
+        <div class="round profile-picture ms-4 mt-4 bg-white shadow">
             <img class="p-2 round profile-picture" src="{{profileDetail.profileImgUrl}}" alt="">
         </div>
         <div class="shadow rounded px-4 pt-5 pb-2 about">
