--- a/agora-angular/src/app/app.component.html
+++ b/agora-angular/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-nav></app-nav>
-<router-outlet></router-outlet>
+<div [@routeAnimations]="prepareRoute(outlet)">
+    <router-outlet #outlet="outlet"></router-outlet>
+  </div>
