--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -85,7 +85,7 @@
                     <div class="row mx-auto">
                         <div *ngFor="let tag of newProduct.tags">
                             <div class="col-2 text-center">
-                                icon
+                                <!-- icon -->
                             </div>
                             <div class="ps-0 col-10">
                                 <p>{{tag}}</p>
