--- a/agora-angular/src/app/product-list/product-card/product-card.component.html
+++ b/agora-angular/src/app/product-list/product-card/product-card.component.html
@@ -1,6 +1,6 @@
-<div class="card card-product m-3 shadow">
-    <div class="img-placeholder ">
-        <img *ngIf="imgUrl != ''" src="{{imgUrl}}" class="card-img-top img-product" alt="...">
+<div class="card my-3 shadow" [ngClass]="{'card-product':wide, 'card-narrow':!wide}">
+    <div [ngClass]="{'img-placeholder':wide, 'img-placeholder-narrow':!wide}">
+        <img *ngIf="imgUrl != ''" src="{{imgUrl}}" class="card-img-top" [ngClass]="{'img-product':wide, 'img-product-wide':!wide}" alt="...">
         <svg *ngIf="imgUrl == ''" class="card-img-top img-placeholder">
             <rect width="100%" height="100%" fill="#868e96"></rect>
         </svg>
@@ -10,7 +10,7 @@
         <p class="card-text text-primary m-1">{{seller}}</p>
         <h4 class="m-0 fw-bold">{{price | price}}</h4>
     </div>
-    <div class="btn-group mx-2 mb-3">
+    <div class="btn-group mx-2 px-1 mb-3 bottom">
         <a href="/product-details" class="btn btn-primary w-75">Részletek</a>
         <a href="#" class="btn btn-secondary w-25">
             <fa-icon [icon]="faShoppingCart"></fa-icon>
