--- a/agora-angular/src/app/product-list/product-list.component.html
+++ b/agora-angular/src/app/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let product of products" class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
+<div *ngFor="let product of products" [ngClass]="{'col-12 col-sm-6 col-md-5 col-lg-3 col-xl-3':wide, 'col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4':!wide}">
     <!-- <div class="card card-product m-3 shadow">
         <div class="img-placeholder ">
             <img src="{{product.imgUrl}}" class="card-img-top img-product" alt="...">
@@ -15,5 +15,5 @@
             </a>
         </div>
     </div> -->
-    <product-card [name]=product.name [seller]=product.seller [imgUrl]=product.imgUrl [price]=product.price ></product-card>
+    <product-card [name]=product.name [seller]=product.seller [imgUrl]=product.imgUrl [price]=product.price [wide]=wide></product-card>
 </div>
