--- a/agora-angular/src/app/profile-page/profile-page.component.html
+++ b/agora-angular/src/app/profile-page/profile-page.component.html
@@ -1,7 +1,7 @@
-<div class="p-0 container-fluid header" style="background-image: url('../../{{user.headerImgUrl}}');"></div>
-<div class="container mt-5">
+<div class="container-fluid header" style="background-image: url('../../{{user.headerImgUrl}}');"></div>
+<div class="container">
     <div class="d-grid justify-content-md-center">
-        <div class="round profile-picture ms-4 bg-white shadow">
+        <div class="round profile-picture ms-4 mt-4 bg-white shadow">
             <img class="p-2 round profile-picture" src="{{user.profileImgUrl}}" alt="">
         </div>
         <div class="shadow rounded px-4 pt-5 pb-2 about">
@@ -13,7 +13,7 @@
                     <div class="d-grid gap-1 d-flex justify-content-end mb-2">
                         <div class="btn-group">
                             <a href="#" class="btn btn-primary my-2 px-2">Követés</a>
-                            <a href="#" class="btn btn-secondary my-2 pe-3">
+                            <a href="/messages" class="btn btn-secondary my-2 pe-3">
                                 <fa-icon [icon]="faEnvelope"></fa-icon>
                             </a>
                         </div>
