--- a/agora-angular/src/app/search/search.component.html
+++ b/agora-angular/src/app/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="container-fluid row">
-        <div class="col-12 col-md-4">
+    <div class="row">
+        <div class="col-12 col-md-4 mb-2 p-3">
             <div class="rounded shadow p-3">
                 <h1>Filter</h1>
                 <label for="customRange1" class="form-label"></label>
@@ -8,11 +8,11 @@
                 <product-categories></product-categories>
             </div>
         </div>
-        <div class="col-12 col-md-8">
+        <div class="col-12 col-md-8 mb-2">
             <div class="rounded shadow p-2">
                 <h1 class="m-3">Termékek</h1>
                 <hr class="m-2">
-                <app-product-list [products]="products" class="row"></app-product-list>
+                <app-product-list [products]="products" [wide]="false" class="row"></app-product-list>
             </div>
         </div>
     </div>
