saját termék adatok

--- a/agora-angular/src/app/messages-page/messages/messages.component.html
+++ b/agora-angular/src/app/messages-page/messages/messages.component.html
@@ -26,9 +26,9 @@
         <div class="row d-felx justify-content-end m-3">
             <p class="col-auto message message-sent p-2 my-4">Szia</p>
         </div>
-        <div *ngFor="let message of messages">
+        <div *ngFor="let message of messages; let i = index">
             <div class="row d-felx m-2" [ngClass]="{'justify-content-end':(!message.recived), 'justify-content-start':message.recived}">
-                <p class="col-auto message p-2 my-4" [ngClass]="{'message-sent':(!message.recived), 'message-recived':message.recived}">{{message.message}}</p>
+                <p class="col-auto message p-2 my-2" [ngClass]="{'message-sent':(!message.recived), 'message-recived':message.recived, 'message-recived-burger-top':message.recived && messages[i+1].recived}">{{message.message}}</p>
             </div>
         </div>
         <div class="place-holder"></div>
