--- a/agora-angular/src/app/my-profile/my-product-list/my-product-list.component.html
+++ b/agora-angular/src/app/my-profile/my-product-list/my-product-list.component.html
@@ -26,14 +26,14 @@
 <div *ngFor="let product of products" class="col-12 col-sm-6 col-md-5 col-lg-4 col-xl-3">
     <div class="card card-product m-3 shadow">
         <div class="img-placeholder ">
-            <p *ngIf="product.public != true" class="warning text-center"><fa-icon [icon]="faExclamationTriangle"></fa-icon> Ez a termék nem publikus. <a href="" class="text-dark">Tedd közzé.</a> </p>
+            <p *ngIf="product.isPublic != true" class="warning text-center"><fa-icon [icon]="faExclamationTriangle"></fa-icon> Ez a termék nem publikus. <a href="" class="text-dark">Tedd közzé.</a> </p>
             <img src="{{product.imgUrl}}" class="card-img-top img-product" alt="...">
         </div>
         <div class="card-body card-body-product text-center">
-            <h5 class="card-title fw-bold" [class.fit-text]="product.productName.length> 20">{{product.productName}}
+            <h5 class="card-title fw-bold" [class.fit-text]="product.name.length> 20">{{product.name}}
             </h5>
-            <p class="card-text text-primary m-1">{{product.sellerName}}</p>
-            <h4 class="m-0 fw-bold">{{product.price}} Ft</h4>
+            <p class="card-text text-primary m-1">{{product.seller}}</p>
+            <h4 class="m-0 fw-bold">{{product.price|price}}</h4>
         </div>
         <div class="btn-group mx-2 mb-3">
             <a href="#" class="btn btn-primary">
