--- a/agora-angular/src/app/product-list/product-card/product-card.component.scss
+++ b/agora-angular/src/app/product-list/product-card/product-card.component.scss
@@ -1,4 +1,4 @@
-$card-product-width: 16rem;
+$card-product-width: 15rem;
 $card-product-height: 28rem;
 
 .card-product{
@@ -32,3 +32,8 @@ $card-product-height: 28rem;
     bottom: 0;
     width: 92.7%;
 }
+// .side-scroll{
+//     display: inline-block;
+//     vertical-align: top;
+//     white-space: pre-wrap;
+// }
