--- a/agora-angular/src/app/front-page/front-page.component.html
+++ b/agora-angular/src/app/front-page/front-page.component.html
@@ -26,7 +26,7 @@
 
 <div id="products" class="container justify-content-center justify-content-md-start">
     <h2 class="main-header fw-bold mt-4">Ajánlatok neked</h2>
-    <app-product-list [products]="products" class="row"></app-product-list>
+    <app-product-list [products]="products"></app-product-list>
 </div>
 
 <page-footer></page-footer>
