--- a/agora-angular/src/app/my-profile/my-profile.component.html
+++ b/agora-angular/src/app/my-profile/my-profile.component.html
@@ -68,6 +68,6 @@
               </select>
         </div>
     </div>
-    <my-product-list class="row" [products]="products"></my-product-list>
+    <my-product-list class="row p-0 gx-5" [products]="products"></my-product-list>
 </div>
 <page-footer></page-footer>
