--- a/agora-angular/src/app/nav/nav.component.scss
+++ b/agora-angular/src/app/nav/nav.component.scss
@@ -41,3 +41,18 @@
     height: 2rem;
     border-radius: 50%;
 }
+.card-now{
+    max-height: 15rem;
+}
+.card-now-body{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    //border-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    width: 100%;
+}
+.border-none{
+    border: none;
+}
