--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -160,7 +160,7 @@
         </div>
     </div>
     <h3 class="m-3 pt-2">További ajánlatok</h3>
-    <app-product-list class="row" [products]="products"></app-product-list>
+    <app-product-list class="row" [products]="products" [sideScrollable]="true"></app-product-list>
 </div>
 <page-footer></page-footer>
 <!-- Review detailed views -->
