--- a/agora-angular/src/app/product-list/product-list.component.html
+++ b/agora-angular/src/app/product-list/product-list.component.html
@@ -1,19 +1,5 @@
-<div *ngFor="let product of products" [ngClass]="{'col-12 col-sm-6 col-md-5 col-lg-3 col-xl-3':wide, 'col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4':!wide}">
-    <!-- <div class="card card-product m-3 shadow">
-        <div class="img-placeholder ">
-            <img src="{{product.imgUrl}}" class="card-img-top img-product" alt="...">
-        </div>
-        <div class="card-body card-body-product text-center">
-            <h5 class="card-title fw-bold" [class.fit-text]="product.productName.length> 20">{{product.productName}}</h5>
-            <p class="card-text text-primary m-1">{{product.sellerName}}</p>
-            <h4 class="m-0 fw-bold">{{product.price}} Ft</h4>
-        </div>
-        <div class="btn-group mx-2 mb-3">
-            <a href="/product-details" class="btn btn-primary w-75">Részletek</a>
-            <a href="#" class="btn btn-secondary w-25">
-                <fa-icon [icon]="faShoppingCart"></fa-icon>
-            </a>
-        </div>
-    </div> -->
-    <product-card [name]=product.name [seller]=product.seller [imgUrl]=product.imgUrl [price]=product.price [wide]=wide></product-card>
+<div class="row gx-5" [ngClass]="{'side-scroll':sideScrollable}">
+    <div *ngFor="let product of products" [ngClass]="{'col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3':wide, 'col-12 col-sm-6 col-md-6 col-lg-4 col-xl-4':!wide, 'side-scroll-item mx-2 col-8':sideScrollable}">
+        <product-card [name]=product.name [seller]=product.seller [imgUrl]=product.imgUrl [price]=product.price [wide]=wide [sideScrollable]=sideScrollable></product-card>
+    </div>
 </div>
