--- a/agora-angular/src/app/product-list/product-list.component.scss
+++ b/agora-angular/src/app/product-list/product-list.component.scss
@@ -17,3 +17,35 @@ $card-product-height: 28rem;
 .fit-text{
     font-size: 1rem;
 }
+.side-scroll{
+    // height: 29rem;
+    width: 100%;
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+    box-sizing: content-box;
+}
+.side-scroll-item{
+    display: inline-block;
+    vertical-align: top;
+    white-space: pre-wrap;
+}
+::-webkit-scrollbar {
+  height: .6rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: .3rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
