--- a/agora-angular/src/app/profile-page/profile-page.component.html
+++ b/agora-angular/src/app/profile-page/profile-page.component.html
@@ -71,6 +71,6 @@
               </select>
         </div>
     </div>
-    <app-product-list class="row" [products]="products"></app-product-list>
+    <app-product-list [products]="products"></app-product-list>
 </div>
 <page-footer></page-footer>
