--- a/agora-angular/src/app/search/search.component.html
+++ b/agora-angular/src/app/search/search.component.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="col-12 col-md-8 mb-2">
-            <div class="rounded shadow p-2">
+            <div class="p-2">
                 <h1 class="m-3">Termékek</h1>
                 <hr class="m-2">
                 <app-product-list [products]="products" [wide]="false" class="row"></app-product-list>
