--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#" class="text-decoration-none">Kategóriák</a></li>
+            <li class="breadcrumb-item"><a href="search" class="text-decoration-none">Kategóriák</a></li>
             <li class="breadcrumb-item"><a href="#" class="text-decoration-none">Ékszerek</a></li>
             <li class="breadcrumb-item"><a href="#" class="text-decoration-none">Nyakláncok</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Csodálatos arany nyaklánc medál</li>
+            <li class="breadcrumb-item active" aria-current="page">{{productDetail.name}}</li>
         </ol>
     </nav>
     <div class="rounded shadow p-4 m-2">
@@ -132,8 +132,7 @@
             <h3>Értékelések</h3>
             <h1 class="fw-bold big ms-3">4,7<small class="fw-normal small">/ 5</small></h1>
             <div class="scrollmenu row">
-                <div *ngFor="let review of reviews" class="shadow rounded review m-2 col-12 col-md-6">
-                    <button (click)="openModal([review.id])" class="none">
+                <a href="#" *ngFor="let review of reviews" class="shadow rounded review m-2 col-12 col-md-6 text-decoration-none text-dark" (click)="openModal([review.id], $event)">
                         <div class="row">
                             <div class="col">
                                 <h5 class="m-2 fw-bold">{{review.title}}</h5>
@@ -154,8 +153,7 @@
                             </div>
                         </div>
                         <p class="m-2">{{review.review|trim: 75}}</p>
-                    </button>
-                </div>
+                </a>
             </div>
         </div>
     </div>
