--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -77,8 +77,18 @@
                     <div class="col-12 col-lg-6">
                         <div class="shadow rounded px-4 pt-3 pb-2 m-2">
                             <div class="row mx-auto">
+                                <div *ngFor="let tag of productDetail.tags">
+                                    <div class="col-2 text-center">
+                                        <!-- <fa-icon [icon]="[iconPrefix, (tag|icon)]"></fa-icon> -->
+                                    </div>
+                                    <div class="ps-0 col-10">
+                                        <p>{{tag}}</p>
+                                    </div>
+                                </div>
+                                <!-- <fa-icon [icon]="[iconPrefix,iconName]"></fa-icon> -->
+                                <!-- <fa-icon [icon]="['fas','tree']"></fa-icon> -->
                                 <div class="col-2 text-center">
-                                    <fa-icon [icon]="faHand"></fa-icon>
+                                    <fa-icon [icon]="faHandPaper"></fa-icon>
                                 </div>
                                 <div class="ps-0 col-10">
                                     <p>Kézzel készült</p>
