--- a/agora-angular/src/app/modal/modal.component.scss
+++ b/agora-angular/src/app/modal/modal.component.scss
@@ -5,6 +5,8 @@
     // left: 0;
     background-color: #fffff4;
     min-width: 18rem;
+    max-width: 85%;
+    max-height: 90%;
 }
 .modal-background{
     z-index: 9;
