--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -78,7 +78,7 @@
         <div class="col-12 col-md-5 p-3 border-start">
             <h4 class="text-center">Előnézet</h4>
             <div class="d-flex justify-content-center">
-                <product-card [name]="newProduct.name" [seller]=newProduct.seller [imgUrl]=newProduct.imgUrl [price]=newProduct.price></product-card>
+                <product-card [name]="newProduct.name" [seller]=newProduct.seller [imgUrl]=newProduct.imgUrl[0] [price]=newProduct.price></product-card>
             </div>
             <div *ngIf="newProduct.tags" class="d-flex justify-content-center">
                 <div class="shadow rounded px-4 pt-3 pb-2 m-2 card-preview">
