--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -10,11 +10,13 @@
     <div class="rounded shadow p-4 m-2">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4">
-                <img src="assets/item1.jpg" class="img-fluid rounded">
+                <a (click)="fullScreenImg($event)" href="#">
+                    <img src="{{selectedImg}}" class="img-fluid rounded shadow-sm">
+                </a>
                 <div class="mt-3">
-                    <img src="assets/item2.jpg" class="w-25 rounded mx-2">
-                    <img src="assets/item3.jfif" class="w-25 rounded mx-2">
-                    <img src="assets/item4.jpg" class="w-25 rounded mx-2">
+                    <a *ngFor="let img of productDetail.imgUrl; let i = index;" (click)="selectImg(i, $event)" href="#">
+                        <img src="{{img}}" class="w-25 rounded mx-2" [ngClass]="{'shadow': selectedImgIndex == i}">
+                    </a>
                 </div>
                 <div class="d-none d-md-block d-lg-none m-2 p-1">
                     <hr>
@@ -32,11 +34,11 @@
                         <p class="m-2">Elérhető: {{productDetail.inventory}}db</p>
                     </div>
                     <div class="col-12 col-lg-6 my-2">
-                        <a href="#" class="btn btn-primary m-2 py-3 w-50">
+                        <a href="#" class="btn btn-primary m-2 py-3 w-50 shadow-sm">
                             <fa-icon [icon]="faShoppingCart"></fa-icon>
                             Kosárba
                         </a>
-                        <a href="#" class="btn btn-secondary m-2 py-3">
+                        <a href="#" class="btn btn-secondary m-2 py-3 shadow-sm">
                             <fa-icon [icon]="faHeart"></fa-icon>
                             Kívánság lista
                         </a>
@@ -77,14 +79,14 @@
                     <div class="col-12 col-lg-6">
                         <div class="shadow rounded px-4 pt-3 pb-2 m-2">
                             <div class="row mx-auto">
-                                <div *ngFor="let tag of productDetail.tags">
+                                <!-- <div *ngFor="let tag of productDetail.tags">
                                     <div class="col-2 text-center">
-                                        <!-- <fa-icon [icon]="[iconPrefix, (tag|icon)]"></fa-icon> -->
+                                        <fa-icon [icon]="[iconPrefix, (tag|icon)]"></fa-icon> 
                                     </div>
                                     <div class="ps-0 col-10">
                                         <p>{{tag}}</p>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!-- <fa-icon [icon]="[iconPrefix,iconName]"></fa-icon> -->
                                 <!-- <fa-icon [icon]="['fas','tree']"></fa-icon> -->
                                 <div class="col-2 text-center">
@@ -174,4 +176,7 @@
 <!-- Review detailed views -->
 <modal-window [(modalVisible)]="modalVisible">
     <app-review [(content)]="reviewContent"></app-review>
+</modal-window>
+<modal-window [(modalVisible)]="imgOpen">
+    <img src="{{selectedImg}}" class="mx-auto d-block rounded img-fullscreen">
 </modal-window>
