--- a/agora-angular/src/app/product-detail/product-detail.component.scss
+++ b/agora-angular/src/app/product-detail/product-detail.component.scss
@@ -46,3 +46,8 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+.img-fullscreen{
+  max-width: 75vw;
+  max-height: 75vh;
+  object-fit: cover;
+}
