--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -82,15 +82,15 @@
             </div>
             <div *ngIf="newProduct.tags" class="d-flex justify-content-center">
                 <div class="shadow rounded px-4 pt-3 pb-2 m-2 card-preview">
-                    <div class="row mx-auto">
-                        <div *ngFor="let tag of newProduct.tags">
-                            <div class="col-2 text-center">
-                                <!-- icon -->
-                            </div>
-                            <div class="ps-0 col-10">
-                                <p>{{tag}}</p>
-                            </div>
+                    <div *ngFor="let tag of newProduct.tags" class="row mx-auto">
+                        <div class="col-2 text-center">
+                            <fa-icon [icon]="[iconPrefix, (tag|icon)]"></fa-icon> 
                         </div>
+                        <div class="ps-0 col-10">
+                            <p>{{tag}}</p>
+                        </div>
+                    </div>
+                    <div class="row mx-auto">
                     </div>
                 </div>
             </div>
