--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -78,17 +78,16 @@
                     </div>
                     <div class="col-12 col-lg-6">
                         <div class="shadow rounded px-4 pt-3 pb-2 m-2">
-                            <div class="row mx-auto">
-                                <!-- <div *ngFor="let tag of productDetail.tags">
-                                    <div class="col-2 text-center">
-                                        <fa-icon [icon]="[iconPrefix, (tag|icon)]"></fa-icon> 
-                                    </div>
-                                    <div class="ps-0 col-10">
-                                        <p>{{tag}}</p>
-                                    </div>
-                                </div> -->
-                                <!-- <fa-icon [icon]="[iconPrefix,iconName]"></fa-icon> -->
-                                <!-- <fa-icon [icon]="['fas','tree']"></fa-icon> -->
+                            <div *ngFor="let tag of productDetail.tags" class="row mx-auto">
+                                <div class="col-2 text-center">
+                                    <fa-icon [icon]="[iconPrefix, (tag|icon)]"></fa-icon> 
+                                </div>
+                                <div class="ps-0 col-10">
+                                    <p>{{tag}}</p>
+                                </div>
+                            </div>
+                            <!-- <div class="row mx-auto">
+                                <fa-icon [icon]="[iconPrefix,iconName]"></fa-icon>
                                 <div class="col-2 text-center">
                                     <fa-icon [icon]="faHandPaper"></fa-icon>
                                 </div>
@@ -107,7 +106,7 @@
                                 <div class="ps-0 col-10">
                                     <p>Környezetbarát</p>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="shadow rounded px-4 pt-3 pb-2 m-2 my-3">
                             <div class="row">
@@ -168,16 +167,18 @@
                 </a>
             </div>
         </div>
-        <div class="row mt-3">
-            <!-- <h5>Értékeld a terméket</h5>
-            <div>
-                <fa-icon *ngFor="let number of [1,2,3,4,5]" [icon]="faStar"></fa-icon>
-            </div> -->
+        <div class="mt-3">
             <a href="#" (click)="writeReview($event)" class="text-decoration-none pt-3 ms-3">
                 <fa-icon [icon]="faEdit"></fa-icon>
                 Vélemény írása
             </a>
         </div>
+        <!-- <div class="row mt-3">
+            <h5>Értékeld a terméket</h5>
+            <div>
+                <fa-icon *ngFor="let number of [1,2,3,4,5]" [icon]="faStar"></fa-icon>
+            </div>
+        </div> -->
     </div>
     <h3 class="m-3 pt-2">További ajánlatok</h3>
     <app-product-list class="row" [products]="products" [sideScrollable]="true"></app-product-list>
@@ -197,5 +198,5 @@
     </a>
 </modal-window>
 <modal-window [(modalVisible)]="newReviewOpen">
-    <review-form></review-form>
+    <review-form (modalState)="closeNewReview()"></review-form>
 </modal-window>
