--- a/agora-angular/src/app/nav/nav.component.html
+++ b/agora-angular/src/app/nav/nav.component.html
@@ -15,11 +15,32 @@
                     class="nav-link-selectable nav-link px-2 link-dark">Most</a></li>
         </ul>
 
-        <div *ngIf="loggedIn" class="col-md-3 text-end">
-            <a href="/" class="btn p-1 m-1">
-                <fa-icon [icon]="faShoppingCart"></fa-icon>
+        <div *ngIf="loggedIn" class="col-md-3 text-end loggedin-nav">
+            <a href="/" class="btn p-1 m-1 btn-cart">
+                <fa-layers [fixedWidth]="true">
+                    <fa-icon [icon]="faShoppingCart"></fa-icon>
+                    <fa-layers-counter content=" "></fa-layers-counter>
+                </fa-layers>
             </a>
-            <a href="/my-profile" class="btn p-1 m-1"><img class="profile-nav" src="assets/profilepic.jpg" alt=""></a>
+            <a (mouseover)="menuOpen = true" (mouseleave)="toggleCart()" href="/my-profile" class="btn p-1 m-1"><img
+                    class="profile-nav" src="assets/profilepic.jpg" alt=""></a>
+            <div *ngIf="menuOpen" class="rounded shadow menu" (mouseover)="menuOpen = true; hoverMenu = true" (mouseleave)="menuOpen = false; hoverMenu = false">
+                <ul class="list-unstyled mb-0">
+                    <li class="text-start m-2">
+                        <p class="small m-0">Bejelentkezve mint <span class="fw-bold">Nagy Erzsébet</span> </p>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider m-0">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Profil</a></li>
+                    <li><a class="dropdown-item" href="#">Kívánság lista</a></li>
+                    <li><a class="dropdown-item" href="#">Beállítások</a></li>
+                    <li>
+                        <hr class="dropdown-divider m-0">
+                    </li>
+                    <li><a class="dropdown-item rounded-bottom" href="#">Kilépés</a></li>
+                </ul>
+            </div>
         </div>
         <div *ngIf="loggedIn == false" class="col-md-3 text-end">
             <a href="/signup-vendor" class="btn p-1 m-1 btn-sell">Eladok</a>
