--- a/agora-angular/src/app/nav/nav.component.html
+++ b/agora-angular/src/app/nav/nav.component.html
@@ -16,7 +16,7 @@
         </ul>
 
         <div *ngIf="loggedIn" class="col-md-3 text-end loggedin-nav">
-            <a href="/" class="btn p-1 m-1 btn-cart">
+            <a href="/cart" class="btn p-1 m-1 btn-cart">
                 <fa-layers [fixedWidth]="true">
                     <fa-icon [icon]="faShoppingCart"></fa-icon>
                     <fa-layers-counter content=" "></fa-layers-counter>
