--- a/agora-angular/src/app/product-list/product-card/product-card.component.html
+++ b/agora-angular/src/app/product-list/product-card/product-card.component.html
@@ -11,7 +11,7 @@
         <h4 class="m-0 fw-bold">{{price | price}}</h4>
     </div>
     <div class="btn-group mx-2 px-1 mb-3 bottom">
-        <a href="/product-details" class="btn btn-primary w-75">Részletek</a>
+        <a [routerLink]="['/product-details']" class="btn btn-primary w-75">Részletek</a>
         <a href="#" class="btn btn-secondary w-25">
             <fa-icon [icon]="faShoppingCart"></fa-icon>
         </a>
